# webapi/gen/http/openapi.yaml
@@ -40,9 +40,15 @@ paths:
             summary: create_student students
             description: 学生を登録する。
             operationId: students#create_student
+            parameters:
+                - name: create_student_request_body
+                  in: body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/StudentsCreateStudentRequestBody'
             responses:
-                "200":
-                    description: OK response.
+                "201":
+                    description: Created response.
                     schema:
                         $ref: '#/definitions/StudentsCreateStudentResponseBody'
                 "400":
@@ -186,6 +192,52 @@ definitions:
         required:
             - name
             - message
+    StudentsCreateStudentRequestBody:
+        title: StudentsCreateStudentRequestBody
+        type: object
+        properties:
+            address:
+                type: string
+                description: 学生の住所
+                example: 名古屋市中区三の丸三丁目1番2号
+            date_of_birth:
+                type: string
+                description: 学生の生年月日 (RFC3339)
+                example: "2022-04-01T13:30:00+09:00"
+                format: date-time
+            expiration_date:
+                type: string
+                description: 学生証の有効期間 (RFC3339)
+                example: "2027-03-31T00:00:00+09:00"
+                format: date-time
+            name:
+                type: string
+                description: 学生の氏名
+                example: 鈴木太郎
+            ruby:
+                type: string
+                description: 学生の氏名のフリガナ
+                example: スズキタロウ
+            student_number:
+                type: integer
+                description: 学生の学籍番号
+                example: 12345
+                format: int64
+        description: Student Body
+        example:
+            address: 名古屋市中区三の丸三丁目1番2号
+            date_of_birth: "2022-04-01T13:30:00+09:00"
+            expiration_date: "2027-03-31T00:00:00+09:00"
+            name: 鈴木太郎
+            ruby: スズキタロウ
+            student_number: 12345
+        required:
+            - name
+            - ruby
+            - student_number
+            - date_of_birth
+            - address
+            - expiration_date
     StudentsCreateStudentResponseBody:
         title: 'Mediatype identifier: application/vnd.student+json; view=default'
         type: object
